Kalshi Proejct spun off

--- a/10. Kalshi/main.ipynb
+++ b/10. Kalshi/main.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "37f2ae38",
    "metadata": {},
    "outputs": [],
@@ -578,30 +578,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "ffc5bfaa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def candlesticks_to_df(candlestick_response):\n",
-    "    \"\"\"Convert candlestick API response to DataFrame with readable timestamps.\"\"\"\n",
-    "    rows = []\n",
-    "    for candle in candlestick_response[\"candlesticks\"]:\n",
-    "        row = {\n",
-    "            \"end_period\": format_timestamp(candle[\"end_period_ts\"]),\n",
-    "            \"volume\": candle[\"volume\"],\n",
-    "            \"open_interest\": candle[\"open_interest\"],\n",
-    "        }\n",
-    "\n",
-    "        # Flatten nested dictionaries\n",
-    "        for section in [\"yes_bid\", \"yes_ask\", \"price\"]:\n",
-    "            for k, v in candle.get(section, {}).items():\n",
-    "                row[f\"{section}_{k}\"] = v\n",
-    "\n",
-    "        rows.append(row)\n",
-    "\n",
-    "    return pd.DataFrame(rows)\n",
-    "\n",
     "def get_all_markets(status=None, batch_size=1000):\n",
     "    all_markets = []\n",
     "    cursor = None\n",
@@ -630,7 +611,27 @@
     "        records.append(row)\n",
     "    df = pd.DataFrame(records)\n",
     "    df.set_index(\"Date\", inplace=True)\n",
-    "    return df"
+    "    return df\n",
+    "\n",
+    "def candlesticks_to_df(candlestick_response):\n",
+    "    \"\"\"Convert candlestick API response to DataFrame with readable timestamps.\"\"\"\n",
+    "    rows = []\n",
+    "    for candle in candlestick_response[\"candlesticks\"]:\n",
+    "        row = {\n",
+    "            \"end_period\": format_timestamp(candle[\"end_period_ts\"]),\n",
+    "            \"volume\": candle[\"volume\"],\n",
+    "            \"open_interest\": candle[\"open_interest\"],\n",
+    "        }\n",
+    "\n",
+    "        # Flatten nested dictionaries\n",
+    "        for section in [\"yes_bid\", \"yes_ask\", \"price\"]:\n",
+    "            for k, v in candle.get(section, {}).items():\n",
+    "                row[f\"{section}_{k}\"] = v\n",
+    "\n",
+    "        rows.append(row)\n",
+    "\n",
+    "    return pd.DataFrame(rows)\n",
+    "\n"
    ]
   },
   {
@@ -672,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "29d983c6",
    "metadata": {},
    "outputs": [],
